--- a/2019年回顾总结.md
+++ b/2019年回顾总结.md
@@ -9,3 +9,8 @@
 **实施步骤** ，计划每天写作两个小时到四个小时，总计划写作20天左右，计划春节前完成。
 本次总结将把前几年自己所写的《我的思想进化史》和《我的投资思想进化史》作为补充内容和链接纳入其中。
 本次写作最大的变化是运用了python、git 、github和markdown写作工具。算是学习技能的实践。
+## 安身立命
+前一段时间，听了鲍鹏山讲水浒系列，谈到一个词，“安身立命”，一个人在这个世界上生存，最紧要的就是“安身立命”，何处安身，何处立命，小说中的那些英雄豪杰每个人都面临在“在何处安身立命的问题，最终都被逼上梁山。在当下的现实世界里，我们每一个人也都面临何处安身，何处立命的问题，我们自己、我们的生活、我们的家人在何处安居生存，我们个人的天命——事业、职业的发展在那个行业、那个平台上得以展现。之前的二十年，很少思考这样的问题，在很多情况下也不需要思考这样的问题，事业单位，一切按部就班的走就行，但有一天也许一切都会改变，人到中年，之前想到的、想不到的，意料之中和意料之外的问题都会出现，作为身处其中的我们该如何去做。
+## 两位朋友，一个是在事业单位中，45岁前一切顺风顺水，一个偶然的变故，突然之间，所有的公职没有了，之前几十年积累的所在行业的人脉资料等统统归零，还承受了几年的牢狱之灾，出来之后，虽然依然性格秉性不改 但知天命的年纪，谈起未来也是惆怅不已，过去的经历也许只有自己知道。这个世界有一句话大家的感受可能都一样，那就是"那有什么感同身受'一切的一切只有自己承担。
+而另一位朋友，之前的四十年也是顺风顺水，一场无妄的担保，加上其他的一些事情，让自己的人生从高峰跌入低谷，五年的时间内，自己和家人承受了极大的痛苦，虽然咬牙挺了过来，但向前看一切也是飘忽不定，在人生中年踌躇徘徊，人生的境遇上下起伏而自己无能为力，三个人在一起聊天，不免想到了”安身立命“这四个字，人的一生高低起伏、境遇好坏不由自己，最终只能安慰自己”一切都是最好的安排“”
+## 蓦然回首，20年前的自己，二十二岁的年纪，离开校门，进入单位，也是踌躇满志，对未来充满梦想，一路走来，二十年来一切还算顺利，但深处不断变化的世界，内心的
