--- a/定投幸福力.md
+++ b/定投幸福力.md
@@ -18,7 +18,7 @@
 * 身心健康
 * 为社区做贡献
 
-很多人都认为幸福是那些把生活过的特别好的人才能拥有，
+### 很多人都认为幸福是那些把生活过的特别好的人才能拥有，
 很遗憾都是世界上只有极少数人拥有，很少有人做到面面俱到、生活满意。
 
 很多人面对幸福五要素越来越焦虑，
